# mcp2serial

./: .gitignore  LICENSE  README.md  README_EN.md  README_PYPI.md  config.yaml  pyproject.toml
docs/en/: installation.md
docs/zh/: installation.md
src/mcp2serial/: __init__.py  server.py
tests/: test_basic_serial.py  test_serial.py
